[tool.poetry]
name = "hpke"
version = "0.3.2"
description = "HPKE implementation"
authors = ["Joseph Birr-Pixton <jpixton@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/ctz/hpke-py"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^43"

[tool.poetry.dev-dependencies]
coverage = {version = "^5.5", extras = ["toml"]}
pylint = "^2.10.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
black = "^22.3.0"
mypy = "^0.942"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
